Ajuste para testar o notification hub no modo antigo